Doing some findbugs recommendations.